# hedge-bot-thing

./: .gitignore  DEVELOPMENT.md  LICENSE  README.md  docker-compose.yml  pyproject.toml
.cursor/rules/: project-context.mdc  update-dev-state.mdc
conf/controllers/: conf_avellaneda_stoikov_1.yml.example
conf/scripts/: conf_hedge_bot_1.yml.example
controllers/: avellaneda_stoikov_controller.py
controllers/market_making/: avellaneda_stoikov_controller.py
scripts/: hedge_bot.py
src/core/: avellaneda_stoikov.py
src/ml/: drift_estimator.py  features.py  regime_classifier.py
src/tax/: trade_logger.py
