[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "hedge-bot-thing"
version = "0.1.0"
description = "Advanced cryptocurrency market making system with ML-assisted parameter estimation"
requires-python = ">=3.10"
license = { file = "LICENSE" }

dependencies = [
    # Core math
    "numpy>=1.26",
    "scipy>=1.12",

    # ML
    "scikit-learn>=1.4",
    "pandas>=2.2",

    # Hummingbot integration
    "hummingbot>=2.0",

    # Configuration
    "pydantic>=2.6",
    "pyyaml>=6.0",

    # Tax reporting
    "jinja2>=3.1",   # for form template rendering
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py310"
