[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hedge-bot-thing"
version = "0.1.0"
description = "Advanced cryptocurrency market making system with ML-assisted parameter estimation"
requires-python = ">=3.10"
license = { file = "LICENSE" }

dependencies = [
    # Core math and ML
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "pandas>=2.2",

    # Configuration
    "pydantic>=2.6",
]

[project.optional-dependencies]
tax = [
    # Required when tax form generation is implemented (Phase 3).
    "jinja2>=3.1",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py310"
